[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navio_blsct" 
version = "0.0.27"
description = "Python binding for the Navio blsct library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/nav-io/libblsct-bindings"
Repository = "https://github.com/nav-io/libblsct-bindings"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*SwigPy.*__module__ attribute:DeprecationWarning"
]

[tool.cibuildwheel]
archs = ["native"]
skip = ["*-musllinux*"]

[tool.cibuildwheel.linux]
before-all = "dnf install -y libtool autoconf-archive"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
environment = { ACLOCAL_PATH = "/usr/share/aclocal", AUTOCONF = "/usr/bin/autoconf" }

