[package]
name = "navio-blsct"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Rust bindings for the Navio blsct external API"
repository = "https://github.com/nav-io/libblsct-bindings"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["navio", "privacy", "confidential", "transaction"]

[dependencies]
libc = "0.2.175"
serde = { version = "1.0.2", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"

[build-dependencies]
cc = "1.2.12"
git2 = "0.20"
num_cpus = "1.16"

